--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <table>
     <tr class="l13">
-      <td class="c1"><img src="img/0empty.jpg"></td>
+      <td class="c1 ko"><img src="img/polo pan-caravelle.jpg"></td>
       <td class="c2"><img src="img/0empty.jpg"></td>
       <td class="c3"><img src="img/0empty.jpg"></td>
       <td class="c4"><img src="img/0empty.jpg"></td>
@@ -50,8 +50,8 @@
     </tr>
     <tr class="l12">
       <td class="c1 ko"><img src="img/mumford sons-babel.jpg"></td>
-      <td class="c2 ko"><img src="img/nhyx atlas.jpg.jpg"></td>
-      <td class="c3 ko"><img src="img/caravan palace-panic.jpg.jpg"></td>
+      <td class="c2 ko"><img src="img/nhyx atlas.jpg"></td>
+      <td class="c3 ko"><img src="img/caravan palace-panic.jpg"></td>
       <td class="c4 ko"><img src="img/manau-panique celtique.jpg"></td>
       <td class="c5 ko"><img src="img/bon entendeur-aller retour.jpg"></td>
       <td class="c6 ko"><img src="img/fiction plane-left side of the brain.jpg"></td>
