Mise à jour des images dans index.html et mise à jour de la version du lockfile dans package-lock.json

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <table>
     <tr class="l13">
       <td class="c1 ko"><img src="img/polo pan-caravelle.jpg"></td>
-      <td class="c2"><img src="img/0empty.jpg"></td>
+      <td class="c2 ko"><img src="img/elbow_build_a_rocket_boys.jpg"></td>
       <td class="c3"><img src="img/0empty.jpg"></td>
       <td class="c4"><img src="img/0empty.jpg"></td>
       <td class="c5"><img src="img/0empty.jpg"></td>
@@ -55,7 +55,7 @@
       <td class="c4 ko"><img src="img/manau-panique celtique.jpg"></td>
       <td class="c5 ko"><img src="img/bon entendeur-aller retour.jpg"></td>
       <td class="c6 ko"><img src="img/fiction plane-left side of the brain.jpg"></td>
-      <td class="c7 ko"><img src="img/elbow_build_a_rocket_boys.jpg"></td>
+      <td class="c7"><img src="img/gil scott heron-the revolution will not be televised.jpg"></td>
       <td class="c8"><img src="img/pleymo-rock.jpg"></td>
       <td class="c9"><img src="img/the rolling stones-beggars banguet.jpg"></td>
       <td class="c10"><img src="img/m-les sens du son.jpg"></td>
